# escmatrix

./: LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/escmatrix/: __init__.py  color.py  controller.py  terminal_tools.py
tests/: test_colors.py  test_controller.py  test_terminal_tools.py
