[project]
name = "escmatrix"
version = "0.1.0"
description = "cmatrix alternative with more features"
authors = [{ name = "Denali Schlesinger", email = "dsch28@bu.edu" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.12.2",
]
